logs/validate.20260410-123930.log
Mode: full
error[E0252]: the name `accept` is defined multiple times
  --> src/Chap19/ArraySeqStEph.rs:56:9
   |
51 |         crate::vstdplus::accept::accept,
   |         ------------------------------- previous import of the value `accept` here
...
56 |     use crate::vstdplus::accept::accept;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `accept` reimported here
   |
   = note: `accept` must be defined only once in the value namespace of this module

error[E0252]: the name `accept` is defined multiple times
  --> src/Chap19/ArraySeqStPer.rs:51:9
   |
37 |     use crate::vstdplus::accept::accept;
   |         ------------------------------- previous import of the value `accept` here
...
51 |         crate::vstdplus::accept::accept,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `accept` reimported here
   |
   = note: `accept` must be defined only once in the value namespace of this module

error[E0425]: cannot find function `accept` in this scope
   --> src/Chap05/SetStEph.rs:950:21
    |
950 |             proof { accept(equal == (self@ == other@)); }
    |                     ^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 27 +     use crate::vstdplus::accept::accept;
    |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0252, E0425.
For more information about an error, try `rustc --explain E0252`.
Elapsed: 14s
Sampled Memory Usage: peak rust_verify RSS: 3419MB, peak z3 RSS: 357MB, min free: 18790MB
Sampled CPU Usage: rust_verify: 50s, z3 children: 27s
